--- a/api/external/api-globa-search.yaml
+++ b/api/external/api-globa-search.yaml
@@ -1,120 +1,124 @@
-basePath: /
-definitions:
-  FileLevelSearchRequest:
-    properties:
-      chainId:
-        description: 副本链ID
-        type: string
-      copyId:
-        description: 副本ID
-        type: string
-      gn:
-        description: 副本代数
-        format: int64
-        type: integer
-      nodeType:
-        description: '文件类型列表。 1：文件，2：文件夹，3：链接,'
-        example:
-          - 1
-        items:
-          format: int32
-          type: integer
-        type: array
-      orderBy:
-        description: >-
-          排序字段。 e.g.
-          resourceName,resourceType,nodeType,nodeName,nodeSize,nodeLastModifiedTime。
-        type: string
-      orderType:
-        description: 排序类型。“asc”或“desc”，默认为“asc”。
-        type: string
-      pageNo:
-        description: 分页页面编码
-        example: 0
-        format: int32
-        type: integer
-      pageSize:
-        description: 分页数据条数
-        example: 10
-        format: int32
-        type: integer
-      path:
-        description: 文件路径
-        type: string
-      resourceId:
-        description: 资源ID
-        type: string
-      resourceName:
-        description: 资源名称
-        example: vm_1234
-        type: string
-      resourceType:
-        description: >-
-          资源类型列表。0:host, 1:fileset, 2:oracle, 3:sqlserver, 4:mysql, 5:gaussdb,
-          6:saphana, 7 gbase, 8 dameng, 9:vmware, 10:hyper-v, 11:fusionsphere,
-          12:exchange
-        example:
-          - 0
-          - 1
-          - 2
-        items:
-          format: int32
-          type: integer
-        type: array
-      searchKey:
-        description: 搜索关键字，将会搜索出包含这个关键字的所有文件。
-        example: my document
-        type: string
-    title: FileLevelSearchRequest
-    type: object
-host: 'localhost:8086'
+---
+swagger: "2.0"
 info:
-  title: 全局检索管理接口
-  version: 1.0.0
+  version: "v1"
+  title: "DEE GlobalSearch API Document"
+  contact: {}
+  license: {}
+host: "localhost"
+basePath: "/"
+tags:
+- name: "File Level Search Management"
+  description: "File Level Search Controller"
 paths:
   /v1/search/file:
     post:
-      x-impact-subsystem: 不影响
-      x-access-port: 25081
-      x-auth-required: 'Y'
-      x-public-api: 'Y'
-      x-sysadmin-role: 'Y'
-      x-dp-admin-role: 'Y'
-      x-auditor-role: 'N'
-      consumes:
-        - application/json
-      operationId: fileSearchUsingPOST
-      parameters:
-        - description: X-Auth-Token
-          in: header
-          name: X-Auth-Token
-          required: true
-          type: string
-        - description: 请求消息体
-          in: body
-          name: request
-          required: true
-          schema:
-            $ref: '#/definitions/FileLevelSearchRequest'
-      produces:
-        - '*/*'
-      responses:
-        '200':
-          description: OK
-          schema:
-            type: object
-        '201':
-          description: Created
-        '401':
-          description: Unauthorized
-        '403':
-          description: Forbidden
-        '404':
-          description: Not Found
-      summary: 细粒度文件搜索
       tags:
-        - file-level-search-rest-api
-swagger: '2.0'
-tags:
-  - description: File Level Search Rest API
-    name: file-level-search-rest-api
+      - "File Level Search Management"
+      summary: "细粒度文件搜索"
+      operationId: "fileSearchUsingPOST"
+      consumes:
+      - "application/json"
+      produces:
+      - "*/*"
+      parameters:
+      - name: "X-Auth-Token"
+        in: "header"
+        description: "X-Auth-Token"
+        required: true
+        type: "string"
+      - in: "body"
+        name: "request"
+        description: "请求消息体"
+        required: true
+        schema:
+          originalRef: "FileLevelSearchRequest"
+          $ref: "#/definitions/FileLevelSearchRequest"
+      responses:
+        "200":
+          description: "OK"
+          schema:
+            type: "object"
+        "201":
+          description: "Created"
+        "401":
+          description: "Unauthorized"
+        "403":
+          description: "Forbidden"
+        "404":
+          description: "Not Found"
+      security:
+      - Authorization:
+        - "global"
+      deprecated: false
+securityDefinitions:
+  Authorization:
+    type: "apiKey"
+    name: "TOKEN"
+    in: "header"
+definitions:
+  FileLevelSearchRequest:
+    type: "object"
+    properties:
+      chainId:
+        type: "string"
+        description: "副本链ID"
+      copyId:
+        type: "string"
+        description: "副本ID"
+      generatedBy:
+        type: "string"
+        description: "副本生成方式"
+      gn:
+        type: "integer"
+        format: "int64"
+        description: "副本gn"
+      nodeType:
+        type: "array"
+        example:
+        - 1
+        description: "文件类型列表。 1：文件，2：文件夹，3：链接"
+        items:
+          type: "integer"
+          format: "int32"
+      orderBy:
+        type: "string"
+        description: "排序字段"
+      orderType:
+        type: "string"
+        description: "排序类型。“asc”或“desc”，默认为“asc”。"
+      pageNo:
+        type: "integer"
+        format: "int32"
+        example: 0
+        description: "分页页面编码"
+      pageSize:
+        type: "integer"
+        format: "int32"
+        example: 10
+        description: "分页数据条数"
+      path:
+        type: "string"
+        description: "文件路径"
+      resourceId:
+        type: "string"
+        description: "资源ID"
+      resourceName:
+        type: "string"
+        example: "vm_1234"
+        description: "资源名称"
+      resourceType:
+        type: "array"
+        example:
+        - 0
+        - 1
+        - 2
+        description: "资源类型列表"
+        items:
+          type: "integer"
+          format: "int32"
+      searchKey:
+        type: "string"
+        example: "my document"
+        description: "搜索关键字，将会搜索出包含这个关键字的所有文件。"
+    title: "FileLevelSearchRequest"
