--- a/api/internal/api-dee-global-search-internal.yaml
+++ b/api/internal/api-dee-global-search-internal.yaml
@@ -1,126 +1,124 @@
-swagger: '2.0'
+---
+swagger: "2.0"
 info:
-  version: v1
-  title: DEE GlobalSearch internal API Document
+  version: "v1"
+  title: "DEE GlobalSearch Internal API Document"
   contact: {}
   license: {}
-host: localhost
-basePath: /
+host: "localhost"
+basePath: "/"
 tags:
-  - name: 全局检索管理
-    description: File Level Search Controller
+- name: "File Level Search Management"
+  description: "File Level Search Controller"
 paths:
   /v1/internal/search/file:
     post:
-      x-impact-subsystem: 影响
-      x-access-port: 8081
-      x-auth-required: 'N'
-      x-public-api: 'N'
       tags:
-        - 全局检索管理
-      summary: 细粒度文件搜索
-      operationId: browseFileUsingPOST
+      - "File Level Search Management"
+      summary: "细粒度文件搜索"
+      operationId: "browseFileUsingPOST"
       consumes:
-        - application/json
+      - "application/json"
       produces:
-        - '*/*'
+      - "*/*"
       parameters:
-        - in: body
-          name: request
-          description: request
-          required: true
-          schema:
-            originalRef: FileLevelSearchRequest
-            $ref: '#/definitions/FileLevelSearchRequest'
-        - name: userId
-          in: query
-          description: userId
-          required: true
-          type: string
+      - in: "body"
+        name: "request"
+        description: "request"
+        required: true
+        schema:
+          originalRef: "FileLevelSearchRequest"
+          $ref: "#/definitions/FileLevelSearchRequest"
+      - name: "userId"
+        in: "query"
+        description: "userId"
+        required: true
+        type: "string"
       responses:
-        '200':
-          description: OK
+        "200":
+          description: "OK"
           schema:
-            type: object
-        '201':
-          description: Created
-        '401':
-          description: Unauthorized
-        '403':
-          description: Forbidden
-        '404':
-          description: Not Found
+            type: "object"
+        "201":
+          description: "Created"
+        "401":
+          description: "Unauthorized"
+        "403":
+          description: "Forbidden"
+        "404":
+          description: "Not Found"
       security:
-        - Authorization:
-            - global
+      - Authorization:
+        - "global"
+      deprecated: false
 securityDefinitions:
   Authorization:
-    type: apiKey
-    name: TOKEN
-    in: header
+    type: "apiKey"
+    name: "TOKEN"
+    in: "header"
 definitions:
   FileLevelSearchRequest:
-    type: object
+    type: "object"
     properties:
       chainId:
-        type: string
-        description: 副本链ID
+        type: "string"
+        description: "副本链ID"
       copyId:
-        type: string
-        description: 副本ID
+        type: "string"
+        description: "副本ID"
       generatedBy:
-        type: string
-        description: 副本生成方式
+        type: "string"
+        description: "副本生成方式"
       gn:
-        type: integer
-        format: int64
-        description: 副本gn
+        type: "integer"
+        format: "int64"
+        description: "副本gn"
       nodeType:
-        type: array
+        type: "array"
         example:
-          - 1
-        description: 文件类型列表。 1：文件，2：文件夹，3：链接
+        - 1
+        description: "文件类型列表。 1：文件，2：文件夹，3：链接"
         items:
-          type: integer
-          format: int32
+          type: "integer"
+          format: "int32"
       orderBy:
-        type: string
-        description: 排序字段
+        type: "string"
+        description: "排序字段"
       orderType:
-        type: string
-        description: 排序类型。“asc”或“desc”，默认为“asc”。
+        type: "string"
+        description: "排序类型。“asc”或“desc”，默认为“asc”。"
       pageNo:
-        type: integer
-        format: int32
+        type: "integer"
+        format: "int32"
         example: 0
-        description: 分页页面编码
+        description: "分页页面编码"
       pageSize:
-        type: integer
-        format: int32
+        type: "integer"
+        format: "int32"
         example: 10
-        description: 分页数据条数
+        description: "分页数据条数"
       path:
-        type: string
-        description: 文件路径
+        type: "string"
+        description: "文件路径"
       resourceId:
-        type: string
-        description: 资源ID
+        type: "string"
+        description: "资源ID"
       resourceName:
-        type: string
-        example: vm_1234
-        description: 资源名称
+        type: "string"
+        example: "vm_1234"
+        description: "资源名称"
       resourceType:
-        type: array
+        type: "array"
         example:
-          - 0
-          - 1
-          - 2
-        description: 资源类型列表
+        - 0
+        - 1
+        - 2
+        description: "资源类型列表"
         items:
-          type: integer
-          format: int32
+          type: "integer"
+          format: "int32"
       searchKey:
-        type: string
-        example: my document
-        description: 搜索关键字，将会搜索出包含这个关键字的所有文件。
-    title: FileLevelSearchRequest
+        type: "string"
+        example: "my document"
+        description: "搜索关键字，将会搜索出包含这个关键字的所有文件。"
+    title: "FileLevelSearchRequest"
